--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,13 +6,18 @@
     </ion-tab-button>
 
     <ion-tab-button tab="top-rated">
-      <ion-icon name="ellipse"></ion-icon>
+      <ion-icon name="star-half-outline"></ion-icon>
       <ion-label>Top Rated</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="popular">
-      <ion-icon name="square"></ion-icon>
+      <ion-icon name="flame-outline"></ion-icon>
       <ion-label>Popular</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="menu">
+      <ion-icon name="menu-outline"></ion-icon>
+      <ion-label>Menu</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
