--- a/src/app/tabs/trending/trending.page.html
+++ b/src/app/tabs/trending/trending.page.html
@@ -3,8 +3,7 @@
     <ion-title slot="start"> Trending </ion-title>
 
     <!-- Filters -->
-    <!-- *ngIf="deviceType.device.device === 'desktop'" -->
-    <div slot="end" class="filters-box-desktop">
+    <div slot="end" class="filters-box">
       <!-- Media Type -->
       <ion-list>
         <ion-item>
