--- a/src/app/tabs/trending/trending.page.html
+++ b/src/app/tabs/trending/trending.page.html
@@ -38,13 +38,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Trending</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+<ion-content>
   <app-movie-list
     [items]="items"
     (loadMoreItems)="loadMore($event)"
