--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,34 +1,15 @@
 <ion-tabs>
-  <ion-menu contentId="main-content">
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>Menu Content</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content class="ion-padding">This is the menu content.</ion-content>
-  </ion-menu>
+  <app-menu></app-menu>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="trending">
-      <ion-icon name="trending-up-outline"></ion-icon>
-      <ion-label>Trending</ion-label>
+    <ion-tab-button tab="discover">
+      <ion-icon name="compass-outline"></ion-icon>
+      <ion-label>Discover</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="top-rated">
-      <ion-icon name="star-half-outline"></ion-icon>
-      <ion-label>Top Rated</ion-label>
+    <ion-tab-button tab="search">
+      <ion-icon name="search-outline"></ion-icon>
+      <ion-label>Search</ion-label>
     </ion-tab-button>
-
-    <ion-tab-button tab="popular">
-      <ion-icon name="flame-outline"></ion-icon>
-      <ion-label>Popular</ion-label>
-    </ion-tab-button>
-
-    <ion-menu-button>
-      <ion-tab-button>
-        <ion-icon name="menu-outline"></ion-icon>
-        <ion-label id="main-content">Menu</ion-label>
-      </ion-tab-button>
-    </ion-menu-button>
   </ion-tab-bar>
 </ion-tabs>
