--- a/src/app/trending/trending.page.html
+++ b/src/app/trending/trending.page.html
@@ -1,5 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-menu-button slot="start" id="menu-content">
+      <ion-icon name="menu-outline"></ion-icon>
+    </ion-menu-button>
+
     <ion-title slot="start"> Trending </ion-title>
 
     <!-- Filters -->
