--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,9 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>search</ion-title>
+    <ion-menu-button slot="start" id="menu"> </ion-menu-button>
+    <ion-title>Search</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
