--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -1,4 +1,4 @@
-<ion-menu contentId="menu-content">
+<ion-menu contentId="menu">
   <ion-header>
     <ion-toolbar>
       <ion-title>TMDB</ion-title>
