--- a/src/app/trending/trending.page.html
+++ b/src/app/trending/trending.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-menu-button slot="start" id="menu-content"> </ion-menu-button>
+    <ion-menu-button slot="start" id="menu"> </ion-menu-button>
 
     <ion-title slot="start"> Trending </ion-title>
 
