--- a/src/app/discover/discover.page.html
+++ b/src/app/discover/discover.page.html
@@ -1,11 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-menu-button slot="start" id="menu"> </ion-menu-button>
+    <ion-menu-button slot="start"> </ion-menu-button>
     <ion-title>Discover</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <!-- Discover Filters -->
   <ion-accordion-group expand="inset">
     <ion-accordion value="first">
       <ion-item slot="header" color="light">
