--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,70 +1,6 @@
 <ion-app>
   <!-- Side Menu -->
-  <ion-menu contentId="main-content">
-    <!-- <ion-header>
-      <ion-toolbar>
-        <ion-title>TMDB</ion-title>
-      </ion-toolbar>
-    </ion-header> -->
-
-    <ion-content class="ion-padding">
-      <!-- Find -->
-      <ion-list>
-        <ion-list-header>Find</ion-list-header>
-        <ion-menu-toggle>
-          <ion-item [routerLink]="['/discover']" routerLinkActive="discover">
-            <ion-icon name="compass-outline"></ion-icon>
-            <ion-label> Discover </ion-label>
-          </ion-item>
-          <ion-item [routerLink]="['/search']">
-            <ion-icon name="search-outline"></ion-icon>
-            <ion-label>Search</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-      </ion-list>
-
-      <!-- View -->
-      <ion-list>
-        <ion-list-header>View</ion-list-header>
-        <ion-menu-toggle>
-          <ion-item [routerLink]="['/trending']">
-            <ion-icon name="trending-up-outline"></ion-icon>
-            <ion-label> Trending </ion-label>
-          </ion-item>
-          <ion-item [routerLink]="['/top-rated']">
-            <ion-icon name="star"></ion-icon>
-            <ion-label> Top Rated </ion-label>
-          </ion-item>
-          <ion-item [routerLink]="['/popular']">
-            <ion-icon name="flame-outline"></ion-icon>
-            <ion-label> Popular </ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-      </ion-list>
-
-      <!-- Profile -->
-      <ion-list>
-        <ion-list-header>Profile</ion-list-header>
-        <ion-menu-toggle>
-          <ion-item [routerLink]="['/favorite']">
-            <ion-icon name="heart-half-outline"></ion-icon>
-            <ion-label> Favorite </ion-label>
-          </ion-item>
-          <ion-item [routerLink]="['/rated']">
-            <ion-icon name="star-half-outline"></ion-icon>
-            <ion-label> Rated </ion-label>
-          </ion-item>
-          <ion-item [routerLink]="['/watchlist']">
-            <ion-icon name="bookmarks-outline"></ion-icon>
-            <ion-label> Watchlist </ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-      </ion-list>
-
-      <!-- Logout -->
-      <!-- Login -->
-    </ion-content>
-  </ion-menu>
+  <app-menu></app-menu>
 
   <!-- Main Content -->
   <ion-router-outlet id="main-content"></ion-router-outlet>
