--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-menu-button slot="start" id="menu"> </ion-menu-button>
+    <ion-menu-button slot="start"> </ion-menu-button>
     <ion-title>Search</ion-title>
   </ion-toolbar>
 </ion-header>
