--- a/src/app/top-rated/top-rated.page.html
+++ b/src/app/top-rated/top-rated.page.html
@@ -1,5 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-menu-button slot="start"> </ion-menu-button>
+
     <ion-title> Top Rated </ion-title>
   </ion-toolbar>
 </ion-header>
