--- a/src/app/trending/trending.page.html
+++ b/src/app/trending/trending.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-menu-button slot="start" id="menu"> </ion-menu-button>
+    <ion-menu-button slot="start"> </ion-menu-button>
 
-    <ion-title slot="start"> Trending </ion-title>
+    <ion-title> Trending </ion-title>
 
     <!-- Filters -->
     <div slot="end" class="filters-box">
