--- a/src/global.scss
+++ b/src/global.scss
@@ -15,13 +15,16 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 // Custom
-
 .overflow {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
+ion-title {
+  padding-left: 5px;
+}
+
 ion-toolbar {
-  height: 56px !important;
+  padding: 0 15px;
 }
