--- a/src/app/trending/trending.page.html
+++ b/src/app/trending/trending.page.html
@@ -37,8 +37,8 @@
 </ion-header>
 
 <ion-content>
-  <app-movie-list
+  <app-item-list
     [items]="items"
     (loadMoreItems)="loadMore($event)"
-  ></app-movie-list>
+  ></app-item-list>
 </ion-content>
