--- a/src/app/top-rated/top-rated.page.html
+++ b/src/app/top-rated/top-rated.page.html
@@ -3,6 +3,22 @@
     <ion-menu-button slot="start"> </ion-menu-button>
 
     <ion-title> Top Rated </ion-title>
+
+    <!-- Filters -->
+    <div slot="end" class="filters-box">
+      <!-- Media Type -->
+      <div class="filter-media">
+        <ion-select
+          interface="popover"
+          placeholder="Select Media"
+          [value]="mediaType.media_type"
+          (ionChange)="updateMediaType($event)"
+        >
+          <ion-select-option value="movie">Movies</ion-select-option>
+          <ion-select-option value="tv">Show</ion-select-option>
+        </ion-select>
+      </div>
+    </div>
   </ion-toolbar>
 </ion-header>
 
@@ -12,4 +28,9 @@
       <ion-title size="large">Top Rated</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <app-item-list
+    [items]="items"
+    (loadMoreItems)="loadMore($event)"
+  ></app-item-list>
 </ion-content>
