--- a/src/app/top-rated/top-rated.page.html
+++ b/src/app/top-rated/top-rated.page.html
@@ -15,7 +15,7 @@
           (ionChange)="updateMediaType($event)"
         >
           <ion-select-option value="movie">Movies</ion-select-option>
-          <ion-select-option value="tv">Show</ion-select-option>
+          <ion-select-option value="tv">Shows</ion-select-option>
         </ion-select>
       </div>
     </div>
