--- a/src/app/trending/trending.page.html
+++ b/src/app/trending/trending.page.html
@@ -16,7 +16,7 @@
         >
           <ion-select-option value="all">All</ion-select-option>
           <ion-select-option value="movie">Movies</ion-select-option>
-          <ion-select-option value="tv">Show</ion-select-option>
+          <ion-select-option value="tv">Shows</ion-select-option>
         </ion-select>
       </div>
 
