--- a/src/app/popular/popular.page.html
+++ b/src/app/popular/popular.page.html
@@ -2,6 +2,22 @@
   <ion-toolbar>
     <ion-menu-button slot="start"> </ion-menu-button>
     <ion-title> Popular </ion-title>
+
+    <!-- Filters -->
+    <div slot="end" class="filters-box">
+      <!-- Media Type -->
+      <div class="filter-media">
+        <ion-select
+          interface="popover"
+          placeholder="Select Media"
+          [value]="mediaType.media_type"
+          (ionChange)="updateMediaType($event)"
+        >
+          <ion-select-option value="movie">Movies</ion-select-option>
+          <ion-select-option value="tv">Shows</ion-select-option>
+        </ion-select>
+      </div>
+    </div>
   </ion-toolbar>
 </ion-header>
 
@@ -11,4 +27,9 @@
       <ion-title size="large">Popular</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <app-item-list
+    [items]="items"
+    (loadMoreItems)="loadMore($event)"
+  ></app-item-list>
 </ion-content>
