--- a/src/app/popular/popular.page.html
+++ b/src/app/popular/popular.page.html
@@ -21,13 +21,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Popular</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+<ion-content>
   <app-item-list
     [items]="items"
     (loadMoreItems)="loadMore($event)"
