--- a/src/app/top-rated/top-rated.page.html
+++ b/src/app/top-rated/top-rated.page.html
@@ -22,13 +22,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Top Rated</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+<ion-content>
   <app-item-list
     [items]="items"
     (loadMoreItems)="loadMore($event)"
